--- a/grails-app/pages/home/HomePage.html
+++ b/grails-app/pages/home/HomePage.html
@@ -4,6 +4,9 @@
         <span wicket:id="enterEmail" class="mark"></span> <br><br>
 
         <input type="text" wicket:id="email"></input> <br><br><br>
+
+        <span wicket:id="tagLabel" class="mark"></span> <br><br>
+        <input type="text" wicket:id="enterTag"></input> <br><br><br>
         <!--<input type="text" wicket:id="password"></input>-->
         <input type="submit" value="Submit">
     </form>
